# webframework-benchmark

./: .gitignore  docker-compose.yml  package_all.sh  readme.md
actix/: Cargo.toml  Dockerfile  package.sh
actix/src/: actix_server.rs
aspnetcore/: AspNetCoreServer.cs  Dockerfile  package.sh
aspnetcore/Properties/: launchSettings.json
beast/: Dockerfile  beast_server.cpp  package.sh
bun/: Dockerfile  bun_server.mjs  package.sh
drogon/: Dockerfile  drogon_server.cpp  package.sh
gin/: Dockerfile  gin_server.go  go.mod  package.sh
gofiber/: Dockerfile  go.mod  gofiber_server.go  package.sh
hertz/: Dockerfile  go.mod  hertz_server.go  package.sh
libevent/: libevhtp_server.c
libevhtp/: Dockerfile  libevhtp_server.c  package.sh
nginx/: Dockerfile  nginx_http.conf  package.sh
node/: Dockerfile  node_server.mjs  package.sh
springboot/: pom.xml
springboot/spring-webflux/: pom.xml
springboot/spring-webflux/src/main/docker/: Dockerfile
springboot/spring-webflux/src/main/java/com/gonwan/benchmark/: SpringWebFluxApplication.java
springboot/spring-webflux/src/main/resources/: application.properties
springboot/spring-webmvc/: package.sh  pom.xml
springboot/spring-webmvc-undertow/: pom.xml
springboot/spring-webmvc-undertow/src/main/docker/: Dockerfile
springboot/spring-webmvc-undertow/src/main/java/com/gonwan/benchmark/: SpringWebMvcUndertowApplication.java
springboot/spring-webmvc-undertow/src/main/resources/: application.properties
springboot/spring-webmvc/src/main/resources/: application.properties
(+1 files in other folders)
