[package]
name = "actix"
version = "1.0.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
actix-web = "=4.12.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
actix-http = "=3.11.2"
derive_more = "=2.0.1"
icu_normalizer = "=1.5.0"
idna_adapter = "=1.2.0"
litemap = "=0.7.4"
indexmap = "=2.11.4"
time = "=0.3.41"
zerofrom = "=0.1.5"

[[bin]]
name = "actix_server"
path = "src/actix_server.rs"

[profile.release]
#lto = true
